fix editorjs toolbar behind monaco-editor

--- a/packages/admin-block-editor-tools/src/Raw/Raw-monaco.css
+++ b/packages/admin-block-editor-tools/src/Raw/Raw-monaco.css
@@ -38,3 +38,7 @@
 .monaco-editor .overflowingContentWidget {
   z-index: 3;
 }
+
+.ce-toolbar--opened {
+  z-index: 4;
+}
